--- a/public/Nitrocid.Addons/Nitrocid.ShellPacks/Resources/Languages/enk.json
+++ b/public/Nitrocid.Addons/Nitrocid.ShellPacks/Resources/Languages/enk.json
@@ -2616,6 +2616,18 @@
     {
       "loc": "NKS_SHELLPACKS_RSS_READERCLI_HELP01_BODY",
       "text": "Reading the RSS feeds in this interactive TUI became easier! You can select an RSS feed and read the article directly at the right pane."
+    },
+    {
+      "loc": "NKS_SHELLPACKS_RSS_RSSFEED_FROM",
+      "text": "From"
+    },
+    {
+      "loc": "NKS_SHELLPACKS_RSS_RSSFEED_NOFEED",
+      "text": "No feed."
+    },
+    {
+      "loc": "NKS_SHELLPACKS_RSS_FETCHFAILED",
+      "text": "Failed to get the latest news."
     }
   ]
 }
