--- a/public/Nitrocid.Addons/Nitrocid.ShellPacks/Resources/Languages/ltn.json
+++ b/public/Nitrocid.Addons/Nitrocid.ShellPacks/Resources/Languages/ltn.json
@@ -2617,6 +2617,18 @@
     {
       "loc": "NKS_SHELLPACKS_RSS_READERCLI_HELP01_BODY",
       "text": "Lectio canalium RSS in hac interactiva TUI facilior facta est! Canalem RSS eligere et articulum directe in dextro tabula legere potes."
+    },
+    {
+      "loc": "NKS_SHELLPACKS_RSS_RSSFEED_FROM",
+      "text": "Ex"
+    },
+    {
+      "loc": "NKS_SHELLPACKS_RSS_RSSFEED_NOFEED",
+      "text": "Nulla a lorem."
+    },
+    {
+      "loc": "NKS_SHELLPACKS_RSS_FETCHFAILED",
+      "text": "Defecit ad latest news."
     }
   ]
 }
