--- a/public/Nitrocid.Addons/Nitrocid.ShellPacks/Resources/Languages/Output/Localizations.el.resx
+++ b/public/Nitrocid.Addons/Nitrocid.ShellPacks/Resources/Languages/Output/Localizations.el.resx
@@ -2076,5 +2076,14 @@
   <data name="NKS_SHELLPACKS_RSS_READERCLI_HELP01_BODY" xml:space="preserve">
     <value>Η ανάγνωση των ροών RSS σε αυτό το διαδραστικό TUI έγινε ευκολότερη! Μπορείτε να επιλέξετε μια ροή RSS και να διαβάσετε το άρθρο απευθείας στο δεξί παράθυρο.</value>
   </data>
+  <data name="NKS_SHELLPACKS_RSS_RSSFEED_FROM" xml:space="preserve">
+    <value>Από</value>
+  </data>
+  <data name="NKS_SHELLPACKS_RSS_RSSFEED_NOFEED" xml:space="preserve">
+    <value>Χωρίς τροφοδοσία.</value>
+  </data>
+  <data name="NKS_SHELLPACKS_RSS_FETCHFAILED" xml:space="preserve">
+    <value>Αποτυχία λήψης των τελευταίων ειδήσεων.</value>
+  </data>
 
 </root>
